--- a/includes/header.html
+++ b/includes/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title><?php echo $page_title; ?></title>	
@@ -14,10 +14,10 @@
 	<div id="navigation">
 		<ul>
 			<li><a href="index.php">Home Page</a></li>
-			<li><a href="calculator.php">Calculator</a></li>
-			<li><a href="#">Tommy</a></li>
-			<li><a href="#">Mari</a></li>
-			<li><a href="#">Johnny</a></li>
+			<li><a href="register.php">Register</a></li>
+			<li><a href="view_users.php">View Users</a></li>
+			<li><a href="password.php">Change Password</a></li>
+			<li><a href="#">link five</a></li>
 		</ul>
 	</div>
 	<div id="content"><!-- Start of the page-specific content. -->
